--- a/src/App.css
+++ b/src/App.css
@@ -11,13 +11,17 @@
   color: white;
   display: flex;
   justify-content: center;
-  align-items: center;
+  padding: 3em 0 0 0;
+}
+
+ul {
+  margin: 4em 0;
 }
 
 ul li {
   border-radius: 0.4rem;
   font-size: 1.2rem;
-  padding: 1.5em 3em;
+  padding: 1em 3em;
   list-style-type: none;
   box-shadow: 0px 0px 2rem #1a1c20;
   margin: 1.5em 0;
@@ -26,4 +30,30 @@ ul li {
 button {
   padding: 0.8em 2em;
   font-size: 1rem;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+form label {
+  font-size: 1.2rem;
+}
+
+form input {
+  outline: none;
+}
+
+form input[type="text"] {
+  width: 100%;
+  padding: 0.5em;
+  font-size: 1.2rem;
+  margin: 0.8em 0;
+}
+form input[type="submit"] {
+  padding: 0.5em 1.2em;
+  font-size: 1rem;
+  margin: 0.3em 0;
 }
